[package]
edition = "2024"
name = "project"

[dependencies]
embassy-futures = { version = "0.1.2", }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-nrf = { version = "0.11.0", features = ["defmt", "nrf54l15-app-s", "time-driver-grtc", "gpiote", "unstable-pac", "time"] }
embedded-io = { version = "0.7.0", features = ["defmt"]  }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-alloc = "0.7.0"

embedded-hal-async = "1.0.0"
embassy-embedded-hal = "0.6.0"
embedded-graphics = "0.8.2"
ssd1306 = "0.10.0"
lsm6ds3tr = "0.2.2"

rand = { version = "0.9.0", default-features = false, features = ["small_rng"]}

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embedded-storage = "0.3.1"
portable-atomic = "1"

static_cell = "2"
hex-literal = "1.1"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/nrf54l15" }
]
[[bin]]
name = "blinky"
bench=false
test=false
